<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/frame_native"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_270"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_camera"
                style="@style/MainLeftLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/MainImage"
                    android:src="@drawable/ic_camera_home" />

                <TextView
                    style="@style/MainText"
                    android:text="@string/txt_camera" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_gallery"
                style="@style/MainRightLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/MainImage"
                    android:src="@drawable/ic_gallery_home" />

                <TextView
                    style="@style/MainText"
                    android:text="@string/txt_gallery" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/lin_my_creation"
                style="@style/MainLeftLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/MainImage"
                    android:src="@drawable/ic_my_creation_home" />

                <TextView
                    style="@style/MainText"
                    android:text="@string/txt_my_creation" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_share"
                style="@style/MainLeftLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_weight="1"
                android:background="@drawable/app_main_centre"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/MainImage"
                    android:src="@drawable/ic_share_home" />

                <TextView
                    style="@style/MainText"
                    android:text="@string/txt_share" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_rate_us"
                style="@style/MainRightLinearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    style="@style/MainImage"
                    android:src="@drawable/ic_rate_us_home" />

                <TextView
                    style="@style/MainText"
                    android:text="@string/txt_rate_us" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
